--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                 <div class="testimonial-wrap">
                   <div class="testimonial-item">
                     <div  data-aos="fade-left" data-aos-delay="200">
-                      <img src="assets/img/industries/header4.png" class="img-fluid" alt="">
+                      <img src="assets/img/indus/header4.png" class="img-fluid" alt="">
                     </div>
                   </div>
                 </div>
@@ -97,7 +97,7 @@
                 <div class="testimonial-wrap">
                   <div class="testimonial-item">
                     <div  data-aos="fade-left" data-aos-delay="200">
-                      <img src="assets/img/industries/header3.jpeg" class="img-fluid" alt="">
+                      <img src="assets/img/indus/header3.jpeg" class="img-fluid" alt="">
                     </div>
                   </div>
                 </div>
@@ -106,7 +106,7 @@
                 <div class="testimonial-wrap">
                   <div class="testimonial-item">
                     <div  data-aos="fade-left" data-aos-delay="200">
-                      <img src="assets/img/industries/header1.jpeg" class="img-fluid" alt="">
+                      <img src="assets/img/indus/header1.jpeg" class="img-fluid" alt="">
                     </div>
                   </div>
                 </div>
@@ -115,7 +115,7 @@
                 <div class="testimonial-wrap">
                   <div class="testimonial-item">
                     <div  data-aos="fade-left" data-aos-delay="200">
-                      <img src="assets/img/industries/tyre.jpeg" class="img-fluid" alt="">
+                      <img src="assets/img/indus/tyre.jpeg" class="img-fluid" alt="">
                     </div>
                   </div>
                 </div>
@@ -124,7 +124,7 @@
                 <div class="testimonial-wrap">
                   <div class="testimonial-item">
                     <div  data-aos="fade-left" data-aos-delay="200">
-                      <img src="assets/img/industries/header5.jpeg" class="img-fluid" alt="">
+                      <img src="assets/img/indus/header5.jpeg" class="img-fluid" alt="">
                     </div>
                   </div>
                 </div>
@@ -133,7 +133,7 @@
                 <div class="testimonial-wrap">
                   <div class="testimonial-item">
                     <div  data-aos="fade-left" data-aos-delay="200">
-                      <img src="assets/img/industries/header6.png" class="img-fluid" alt="">
+                      <img src="assets/img/indus/header6.png" class="img-fluid" alt="">
                     </div>
                   </div>
                 </div>
@@ -542,7 +542,7 @@
                   <div class="testimonial-item">
                     <div class="member" data-aos="fade-up" data-aos-delay="100">
                       <div class="member-img">
-                        <img src="assets/img/Industries/cement.jpeg" class="img-fluid" alt="">
+                        <img src="assets/img/indus/cement.jpeg" class="img-fluid" alt="">
                       </div>
                       <div class="member-info">
                         <h3>Cements</h3>
@@ -562,7 +562,7 @@
                   <div class="testimonial-item">
                     <div class="member" data-aos="fade-up" data-aos-delay="100">
                       <div class="member-img">
-                        <img src="assets/img/Industries/oilgas.jpeg" class="img-fluid" alt="">
+                        <img src="assets/img/indus/oilgas.jpeg" class="img-fluid" alt="">
                       </div>
                       <div class="member-info">
                         <h3>Oil and Gas</h3>
@@ -580,7 +580,7 @@
                   <div class="testimonial-item">
                     <div class="member" data-aos="fade-up" data-aos-delay="100">
                       <div class="member-img">
-                        <img src="assets/img/Industries/tyre.jpeg" class="img-fluid" alt="">
+                        <img src="assets/img/indus/tyre.jpeg" class="img-fluid" alt="">
                       </div>
                       <div class="member-info">
                         <h3>Tyres</h3>
@@ -599,7 +599,7 @@
                   <div class="testimonial-item">
                     <div class="member" data-aos="fade-up" data-aos-delay="100">
                       <div class="member-img">
-                        <img src="assets/img/Industries/refinery.jpeg" class="img-fluid" alt="">
+                        <img src="assets/img/indus/refinery.jpeg" class="img-fluid" alt="">
                       </div>
                       <div class="member-info">
                         <h3>Refineries</h3>
@@ -617,7 +617,7 @@
                   <div class="testimonial-item">
                     <div class="member" data-aos="fade-up" data-aos-delay="100">
                       <div class="member-img">
-                        <img src="assets/img/Industries/energy.jpeg" class="img-fluid" alt="">
+                        <img src="assets/img/indus/energy.jpeg" class="img-fluid" alt="">
                       </div>
                       <div class="member-info">
                         <h3>Energy</h3>
@@ -636,7 +636,7 @@
                   <div class="testimonial-item">
                     <div class="member" data-aos="fade-up" data-aos-delay="100">
                       <div class="member-img">
-                        <img src="assets/img/Industries/metal.jpeg" class="img-fluid" alt="">
+                        <img src="assets/img/indus/metal.jpeg" class="img-fluid" alt="">
                       </div>
                       <div class="member-info">
                         <h3>Metals</h3>
