--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                 <div class="testimonial-wrap">
                   <div class="testimonial-item">
                     <div  data-aos="fade-left" data-aos-delay="200">
-                      <img src="assets/img/indus/header6.png" class="img-fluid" alt="">
+                      <img src="https://ik.imagekit.io/digilentauto/indus/header6.png?updatedAt=1683362944187" class="img-fluid" alt="">
                     </div>
                   </div>
                 </div>
@@ -97,7 +97,7 @@
                 <div class="testimonial-wrap">
                   <div class="testimonial-item">
                     <div  data-aos="fade-left" data-aos-delay="200">
-                      <img src="assets/img/indus/header5.jpeg" class="img-fluid" alt="">
+                      <img src="https://ik.imagekit.io/digilentauto/indus/header5.jpeg?updatedAt=1683362974920" class="img-fluid" alt="">
                     </div>
                   </div>
                 </div>
@@ -106,7 +106,7 @@
                 <div class="testimonial-wrap">
                   <div class="testimonial-item">
                     <div  data-aos="fade-left" data-aos-delay="200">
-                      <img src="assets/img/indus/header1.jpeg" class="img-fluid" alt="">
+                      <img src="https://ik.imagekit.io/digilentauto/indus/header1.jpeg?updatedAt=1683362946282" class="img-fluid" alt="">
                     </div>
                   </div>
                 </div>
@@ -115,7 +115,7 @@
                 <div class="testimonial-wrap">
                   <div class="testimonial-item">
                     <div  data-aos="fade-left" data-aos-delay="200">
-                      <img src="assets/img/indus/tyre.jpeg" class="img-fluid" alt="">
+                      <img src="https://ik.imagekit.io/digilentauto/indus/tyre.jpeg?updatedAt=1683362950426" class="img-fluid" alt="">
                     </div>
                   </div>
                 </div>
