Using imagekit urls fot tech

--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@
 
         <div class="row">
           <div class="col-md-6 d-flex align-items-stretch">
-            <div class="card" style='background-image: url("assets/img/technical/tech1.jpeg");' data-aos="fade-up"
+            <div class="card" style='background-image: url("https://ik.imagekit.io/digilentauto/technical/tech1.jpeg?updatedAt=1683363489872");' data-aos="fade-up"
               data-aos-delay="100">
               <div class="card-body">
                 <h5 class="card-title"><a href="">Process/Machine Automation</a></h5>
@@ -309,7 +309,7 @@
             </div>
           </div>
           <div class="col-md-6 d-flex align-items-stretch mt-4 mt-md-0">
-            <div class="card" style='background-image: url("assets/img/technical/tech2.jpeg");' data-aos="fade-up"
+            <div class="card" style='background-image: url("https://ik.imagekit.io/digilentauto/technical/tech2.jpeg?updatedAt=1683363490576");' data-aos="fade-up"
               data-aos-delay="200">
               <div class="card-body">
                 <h5 class="card-title"><a href="">Design and Preparation</a></h5>
@@ -323,7 +323,7 @@
 
           </div>
           <div class="col-md-6 d-flex align-items-stretch mt-4">
-            <div class="card" style='background-image: url("assets/img/technical/tech3.jpeg");' data-aos="fade-up"
+            <div class="card" style='background-image: url("https://ik.imagekit.io/digilentauto/technical/tech3.jpeg?updatedAt=1683363488864");' data-aos="fade-up"
               data-aos-delay="100">
               <div class="card-body">
                 <h5 class="card-title"><a href="">Development of MES reports in FT Historian and FT VantagePoint. </a>
@@ -346,7 +346,7 @@
             </div>
           </div>
           <div class="col-md-6 d-flex align-items-stretch mt-4">
-            <div class="card" style='background-image: url("assets/img/more-services-4.jpg");' data-aos="fade-up"
+            <div class="card" style='background-image: url("https://ik.imagekit.io/digilentauto/technical/tech4.jpeg?updatedAt=1683363489684");' data-aos="fade-up"
               data-aos-delay="100">
               <div class="card-body">
                 <h5 class="card-title"><a href="">Customer Support</a></h5>
@@ -357,7 +357,7 @@
             </div>
           </div>
           <div class="col-md-6 d-flex align-items-stretch mt-4">
-            <div class="card" style='background-image: url("assets/img/technical/tech6.jpeg");' data-aos="fade-up"
+            <div class="card" style='background-image: url("https://ik.imagekit.io/digilentauto/technical/tech6.jpeg?updatedAt=1683363488714");' data-aos="fade-up"
               data-aos-delay="100">
               <div class="card-body">
                 <h5 class="card-title"><a href="">Diagnostics and Troubleshooting</a></h5>
