Using imagekit urls fot techno

--- a/index.html
+++ b/index.html
@@ -523,7 +523,7 @@
                   <div class="testimonial-item">
                     <div class="member" data-aos="fade-up" data-aos-delay="100">
                       <div class="member-img">
-                        <img src="assets/img/indus/cement.jpeg" class="img-fluid" alt="">
+                        <img src="https://ik.imagekit.io/digilentauto/indus/cement.jpeg?updatedAt=1683362953375" class="img-fluid" alt="">
                       </div>
                       <div class="member-info">
                         <h3>Cements</h3>
@@ -543,7 +543,7 @@
                   <div class="testimonial-item">
                     <div class="member" data-aos="fade-up" data-aos-delay="100">
                       <div class="member-img">
-                        <img src="assets/img/indus/oilgas.jpeg" class="img-fluid" alt="">
+                        <img src="https://ik.imagekit.io/digilentauto/indus/oilgas.jpeg?updatedAt=1683362950313" class="img-fluid" alt="">
                       </div>
                       <div class="member-info">
                         <h3>Oil and Gas</h3>
@@ -561,7 +561,7 @@
                   <div class="testimonial-item">
                     <div class="member" data-aos="fade-up" data-aos-delay="100">
                       <div class="member-img">
-                        <img src="assets/img/indus/tyre.jpeg" class="img-fluid" alt="">
+                        <img src="https://ik.imagekit.io/digilentauto/indus/tyre.jpeg?updatedAt=1683362950426" class="img-fluid" alt="">
                       </div>
                       <div class="member-info">
                         <h3>Tyres</h3>
@@ -580,7 +580,7 @@
                   <div class="testimonial-item">
                     <div class="member" data-aos="fade-up" data-aos-delay="100">
                       <div class="member-img">
-                        <img src="assets/img/indus/refinery.jpeg" class="img-fluid" alt="">
+                        <img src="https://ik.imagekit.io/digilentauto/indus/refinery.jpeg?updatedAt=1683362952540" class="img-fluid" alt="">
                       </div>
                       <div class="member-info">
                         <h3>Refineries</h3>
@@ -598,7 +598,7 @@
                   <div class="testimonial-item">
                     <div class="member" data-aos="fade-up" data-aos-delay="100">
                       <div class="member-img">
-                        <img src="assets/img/indus/energy.jpeg" class="img-fluid" alt="">
+                        <img src="https://ik.imagekit.io/digilentauto/indus/energy.jpeg?updatedAt=1683362944318" class="img-fluid" alt="">
                       </div>
                       <div class="member-info">
                         <h3>Energy</h3>
@@ -617,7 +617,7 @@
                   <div class="testimonial-item">
                     <div class="member" data-aos="fade-up" data-aos-delay="100">
                       <div class="member-img">
-                        <img src="assets/img/indus/metal.jpeg" class="img-fluid" alt="">
+                        <img src="https://ik.imagekit.io/digilentauto/indus/metal.jpeg?updatedAt=1683362949914" class="img-fluid" alt="">
                       </div>
                       <div class="member-info">
                         <h3>Metals</h3>
